feat: added help page

--- a/server/assets/bottom.gohtml
+++ b/server/assets/bottom.gohtml
@@ -1,6 +1,6 @@
 {{define "bottom"}}
 <footer>
-    <p style="text-align: center">-<br><i>create your own feed<br>wait for the offers to come<br>apply for the jobs</i><br>-<br>this website does not use cookies, <i>hooray!</i><br><br>
+    <p style="text-align: center">---<br>this website does not use cookies, <i>hooray!</i><br><br>
     <a href="https://github.com/Alvaroalonsobabbel/jobber" target="_blank"><img src="data:image/png;base64,{{template "github-logo.base64"}}" width="15" height="15" /></a></p>
 </footer>
 </body>
