--- a/server/assets/index.gohtml
+++ b/server/assets/index.gohtml
@@ -14,16 +14,16 @@
                     type="text"
                     name="keywords"
                     placeholder="keywords, ie. barista"
-                    required
                     pattern="[A-Za-z0-9]+"
-                />
+                    required
+                    oninput="this.setCustomValidity(this.validity.patternMismatch ? 'only letters and numbers are allowed' : '')" />
                 <input
                     type="text"
                     name="location"
                     placeholder="location, ie. berlin"
-                    required
                     pattern="[A-Za-z0-9]+"
-                />
+                    required
+                    oninput="this.setCustomValidity(this.validity.patternMismatch ? 'only letters and numbers are allowed' : '')" />
                 <button type="submit">create RSS feed</button>
             </form>
         </div>
