feat: updated help

--- a/server/assets/help.gohtml
+++ b/server/assets/help.gohtml
@@ -25,37 +25,40 @@
     </style>
     <br>
     <p><b>what is this?</b><br>
-        this is a tool to create automated RSS job search feeds from job portals (ie. LinkedIn), so you can get the latest job offers directly in your RSS reader
+    <b>rssjobs</b> automates the job search from job portals (ie. LinkedIn) for you and gives you a place to see the latest offers clearly displayed in a browser's tab or in your RSS reader with no noise, tracking or advertising.
     </p>
     <br>
-    <p><b>get started in four steps</b><br>
-    1 - install an RSS reader (see reader recommendations)<br>
-    2 - create your job search feed <a href="/">here</a><br>
+    <p><b>how to get started the easy way</b><br>
+    1 - create your job search feed <a href="/" target="_blank">here</a><br>
+    2 - click on <i>open RSS feed</i> to see the results in a browser tab. you can refresh this tab periodically to see if there are any new offers<br>
+    <br>
+    <p><b>how to get started with an RSS reader</b><br>
+    1 - install an RSS reader (see RSS reader recommendations)<br>
+    2 - create your job search feed <a href="/" target="_blank">here</a><br>
     3 - subscribe to the feed in your RSS reader using the url from step 2<br>
-    4 - start getting the offers!</p>
     <br>
     <details>
-    <summary><b>reader recommendations</b></summary>
+    <summary><b>RSS reader recommendations</b></summary>
     <p>
-    <b><a href="https://feeder.co/">feeder.co</a>:</b> (browser extension / iOS / Android app) free without account for browser extension. free with account iOS / Android<br>
-    <b><a href="https://www.vienna-rss.com/">vienna</a>:</b> (macOS) free and no account required. macOS only<br>
-    <b><a href="https://rssmobile.app/">rss mobile</a>:</b> (iOS) free and no account required. iOS only<br></p>
+    <b><a href="https://feeder.co/" target="_blank">feeder.co</a>:</b> (browser extension / iOS / Android app) free without account for browser extension. free with account iOS / Android<br>
+    <b><a href="https://www.vienna-rss.com/" target="_blank">vienna</a>:</b> (macOS) free and no account required. macOS only<br>
+    <b><a href="https://rssmobile.app/" target="_blank">rss mobile</a>:</b> (iOS) free and no account required. iOS only<br></p>
     <p>do you have any reader recommendation? send it to <i>hello@rssjobs.app</i>!</p>
     </details>
      <br>
-    <details>
+    <details class="faq">
     <summary><b>FAQ</b></summary>
     <details>
-    <summary>why RSS?</summary>
-    it's a boring, old, minimalistic technology that does the job
-    </details>
-    <details>
     <summary>do I really have to install an app?</summary>
-    no! you can use a browser extension (see reader recommendations)
+    no! you can see the results in a browser tab directly or you can use a browser extension (see reader recommendations)<br>
     </details>
     <details>
     <summary>which job portals does it use?</summary>
     currently only LinkedIn. you don't need a LinkedIn account to use this service
+    </details>
+    <details>
+    <summary>does this service do any additional filtering on the search?</summary>
+    no. the service does the search for you verbatim and will bring back whatever results the job portal gives back
     </details>
     <details>
     <summary>why does my job search doesn't show a week of content?</summary>
@@ -70,16 +73,12 @@
     yes. if no one uses a feed for a week it will be automatically deleted
     </details>
     <details>
+    <summary>can I have more than one feed?</summary>
+    yes
+    </details>
+    <details>
     <summary>is this service free?</summary>
     yes
-    </details>
-    <details>
-    <summary>really?</summary>
-    yes
-    </details>
-    <details>
-    <summary>but who's profiting?</summary>
-    you!
     </details>
     </details>
     <br>
