Update RSS reader recommendations and improve formatting

--- a/server/assets/help.gohtml
+++ b/server/assets/help.gohtml
@@ -22,6 +22,10 @@
         max-width: 450px;
         margin: 0 auto;
     }
+    details ul {
+        text-align: left;
+        margin-left: 0;
+    }
     </style>
     <br>
     <p><b>what is this?</b><br>
@@ -39,10 +43,12 @@
     <br>
     <details>
     <summary><b>RSS reader recommendations</b></summary>
-    <p>
-    <b><a href="https://feeder.co/" target="_blank">feeder.co</a>:</b> (browser extension / iOS / Android app) free without account for browser extension. free with account iOS / Android<br>
-    <b><a href="https://www.vienna-rss.com/" target="_blank">vienna</a>:</b> (macOS) free and no account required. macOS only<br>
-    <b><a href="https://rssmobile.app/" target="_blank">rss mobile</a>:</b> (iOS) free and no account required. iOS only<br></p>
+    <ul>
+        <li><b><a href="https://netnewswire.com/" target="_blank">NetNewsWire</a>:</b> (iOS / macOS) free, open-source,  with notifications, no account required</li>
+        <li><b><a href="https://feeder.co/" target="_blank">feeder.co</a>:</b> (browser extension / iOS / Android app) free without account for browser extension. free with account iOS / Android</li>
+        <li><b><a href="https://www.vienna-rss.com/" target="_blank">vienna</a>:</b> (macOS) free and no account required. macOS only</li>
+        <li><b><a href="https://rssmobile.app/" target="_blank">rss mobile</a>:</b> (iOS) free and no account required. iOS only</li>
+    </ul>
     <p>do you have any reader recommendation? send it to <i>hello@rssjobs.app</i>!</p>
     </details>
      <br>
