--- a/server/assets/top.gohtml
+++ b/server/assets/top.gohtml
@@ -49,6 +49,10 @@
             .copy-feedback.show {
                 opacity: 1;
             }
+
+            .new-entry {
+                font-style: italic;
+            }
         </style>
     </head>
     <body>
