--- a/server/assets/top.gohtml
+++ b/server/assets/top.gohtml
@@ -51,7 +51,7 @@
             }
 
             .new-entry {
-                font-style: italic;
+                font-weight: bold;
             }
         </style>
     </head>
