--- a/server/assets/bottom.gohtml
+++ b/server/assets/bottom.gohtml
@@ -83,7 +83,7 @@ if (window.location.pathname === "/feeds") {
   const thirtyMinutes = 30 * 60 * 1000;
   setInterval(autoRefresh, thirtyMinutes);
 
-  window.addEventListener("onLoad", () => {
+  window.addEventListener("load", () => {
     highlightLatestAdditions();
     localStorage.setItem(getLocalStorageKey(), latestFeedItemOnPage);
   });
