--- a/server/assets/templates/top.gohtml
+++ b/server/assets/templates/top.gohtml
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>rssjobs</title>
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+        <script src="static/script.js" async defer></script>
         <style>
             .centered-form {
                 display: block;
