--- a/server/assets/css/style.css
+++ b/server/assets/css/style.css
@@ -1,3 +1,149 @@
-.placeholder {
+/* Shared (top.gohtml, bottom.gohtml, and shared styles) */
+header,
+footer {
+  p {
+    text-align: center;
+  }
+}
+
+/* Index.gohtml */
+.container-index {
+  .centered-form {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  form {
+    display: inline;
+  }
+
+  .htmx-indicator {
+    opacity: 0;
     visibility: hidden;
+  }
+  .htmx-request .htmx-indicator,
+  .htmx-request.htmx-indicator {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 200ms ease-in;
+  }
+
+  #content.htmx-indicator {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 200ms ease-in;
+  }
+  #content.htmx-request #content.htmx-indicator,
+  #content.htmx-request.htmx-indicator {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .help-text {
+    text-align: center;
+  }
+}
+
+/* create_response.gohtml */
+
+.container-create-response {
+  .copy-feedback {
+    display: block;
+    color: #28a745;
+    font-size: 14px;
+    margin-top: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .copy-feedback.show {
+    opacity: 1;
+  }
+
+  a {
+    text-decoration: none;
+  }
+}
+
+/* feed_html.gohtml */
+
+.container-feed {
+  .container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .page-text {
+    text-align: center;
+  }
+
+  .details-wrapper {
+    width: auto;
+    max-width: 100%;
+    text-align: left;
+  }
+  details {
+    margin-bottom: 4px;
+    width: 100%;
+  }
+  details > summary {
+    list-style-type: none;
+  }
+
+  details > summary::before {
+    content: "▹ ";
+  }
+
+  details[open] > summary::before {
+    content: "▿ ";
+  }
+
+  details > ul {
+    max-width: 500px;
+    width: 100%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  }
+
+  @media (max-width: 600px) {
+    details > ul {
+      max-width: 100%;
+    }
+  }
+
+  .new-entry {
+    font-weight: bold;
+  }
+}
+
+/* help.gohtml */
+
+.container-help {
+  details {
+    max-width: 450px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  details > summary {
+    list-style-type: none;
+  }
+
+  details > summary::before {
+    content: "▹ ";
+  }
+
+  details[open] > summary::before {
+    content: "▿ ";
+  }
+  p {
+    text-align: center;
+    max-width: 450px;
+    margin: 0 auto;
+  }
+  details ul {
+    text-align: left;
+    margin-left: 0;
+  }
 }
