--- a/server/assets/templates/top.gohtml
+++ b/server/assets/templates/top.gohtml
@@ -9,55 +9,10 @@
         <title>rssjobs</title>
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
         <script src="static/script.js" async defer></script>
-        <style>
-            .centered-form {
-                display: block;
-                margin: 0 auto;
-                text-align: center;
-            }
-
-            .htmx-indicator {
-                opacity: 0;
-                visibility: hidden;
-            }
-            .htmx-request .htmx-indicator,
-            .htmx-request.htmx-indicator {
-                opacity: 1;
-                visibility: visible;
-                transition: opacity 200ms ease-in;
-            }
-
-            #content.htmx-indicator {
-                opacity: 1;
-                visibility: visible;
-                transition: opacity 200ms ease-in;
-            }
-            #content.htmx-request #content.htmx-indicator,
-            #content.htmx-request.htmx-indicator {
-                opacity: 0;
-                visibility: hidden;
-            }
-
-            .copy-feedback {
-                display: block;
-                color: #28a745;
-                font-size: 14px;
-                margin-top: 5px;
-                opacity: 0;
-                transition: opacity 0.3s ease-in-out;
-            }
-
-            .copy-feedback.show {
-                opacity: 1;
-            }
-
-            .new-entry {
-                font-weight: bold;
-            }
-        </style>
+        <link rel="stylesheet" href="static/style.css">
     </head>
     <body>
         <header>
-            <p style="text-align: center"><b>rssjobs</b> - dynamic job search RSS feed generator<br>---<br><i>create your own feed<br>wait for the offers to come<br>apply for the jobs</i><br>---</p>
+            <p><b>rssjobs</b> - dynamic job search RSS feed generator<br>---<br><i>create your own feed<br>wait for the offers to come<br>apply for the jobs</i><br>---</p>
         </header>
 {{end}}
