--- a/server/assets/templates/help.gohtml
+++ b/server/assets/templates/help.gohtml
@@ -33,7 +33,7 @@
     </details>
     <details>
     <summary>which job portals does it use?</summary>
-    currently only LinkedIn. you don't need a LinkedIn account to use this service
+    LinkedIn and Stepstone. you don't need to be registered with any of the job portals to use this service
     </details>
     <details>
     <summary>does this service do any additional filtering on the search?</summary>
